WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286876
Fix current unexpected static-analysis failures
https://bugs.webkit.org/show_bug.cgi?id=286876
Summary
Fix current unexpected static-analysis failures
rupin
Reported
2025-02-01 18:53:15 PST
Fix current unexpected static-analysis failures
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-02-01 18:53:24 PST
<
rdar://problem/144031077
>
rupin
Comment 2
2025-02-01 18:55:07 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39869
EWS
Comment 3
2025-02-02 16:13:41 PST
Committed
289709@main
(2c2fd142e6f5): <
https://commits.webkit.org/289709@main
> Reviewed commits have been landed. Closing PR #39869 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug